header alignment in gallery corrected for small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -557,6 +557,13 @@ label {
         max-width: 70%;
     }
 
+    .header-gallery-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: .7rem;
+    }
+
     #values {
         margin-bottom: 25rem;
     }
@@ -668,5 +675,9 @@ label {
       font-size: 150%; 
       align-items: flex-start;
       margin-left: 1.5rem;
+    }
+
+    #logo {
+        font-size: 244%;
     }
 }
